--- a/latest/RevEng__PAJ7620_8cpp.html
+++ b/latest/RevEng__PAJ7620_8cpp.html
@@ -78,6 +78,32 @@ Include dependency graph for RevEng_PAJ7620.cpp:</div>
 <area shape="rect" title=" " alt="" coords="106,155,165,181"/>
 </map>
 </div>
+</div><a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
+<div class="textblock"><dl class="section author"><dt>Author</dt><dd>Aaron S. Crandall</dd></dl>
+<dl class="section version"><dt>Version</dt><dd>1.4.0</dd></dl>
+<dl class="section copyright"><dt>Copyright</dt><dd><ul>
+<li>Copyright (c) 2015 seeed technology inc.</li>
+<li>Website : www.seeed.cc</li>
+<li>Author : Wuruibin &amp; Xiangnan</li>
+<li>Modified Time: June 2015</li>
+</ul>
+<p class="interdd">Additional contributions:</p><ul>
+<li>2017 - Modified by MarcFinns to encapsulate in class without global variables <br  />
+</li>
+<li>2020 - PROGMEM code adapted from Jaycar-Electronics' work <br  />
+</li>
+<li>2020 - Modified by Aaron S. Crandall <a href="#" onclick="location.href='mai'+'lto:'+'cra'+'nd'+'all'+'@g'+'onz'+'ag'+'a.e'+'du'; return false;">crand<span style="display: none;">.nosp@m.</span>all@<span style="display: none;">.nosp@m.</span>gonza<span style="display: none;">.nosp@m.</span>ga.e<span style="display: none;">.nosp@m.</span>du</a> <br  />
+</li>
+<li>2020 - Modified by Sean Kallaher (GitHub: skallaher)</li>
+</ul>
+<p class="interdd">Description: This driver class can recognize 9 gestures and output the result, including move up, move down, move left, move right, move forward, move backward, circle-clockwise, circle-anti (counter) clockwise, and wave. The driver also allows changing the sensor to 'cursor mode' where it tracks the closest object in view on an (X,Y) coordinate system.</p>
+<p class="interdd">License: The MIT License (MIT)</p>
+<p class="interdd">Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:</p>
+<p class="interdd">The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.</p>
+<p class="enddd">THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. </p>
+</dd></dl>
+<p>PAJ7620U2 Sensor data sheet for reference found here: <a href="https://datasheetspdf.com/pdf-file/1309990/PixArt/PAJ7620U2/1">https://datasheetspdf.com/pdf-file/1309990/PixArt/PAJ7620U2/1</a></p>
+<p>Driver sources, latest code, and authors available at: <a href="https://github.com/acrandal/RevEng_PAJ7620">https://github.com/acrandal/RevEng_PAJ7620</a> </p>
 </div></div><!-- contents -->
 <!-- start footer part -->
 <hr class="footer"/><address class="footer"><small>
