--- a/latest/index.html
+++ b/latest/index.html
@@ -198,12 +198,21 @@ Game Mode Summary</h2>
 </ul>
 <p>The biggest side effect of using game speed is that if you're polling the sensor for events, especially cursor location updates, you can receive data results at around twice the rate with the game speed set.</p>
 <p>NOTE: if you change modes (gesture to cursor or cursor to gesture) the speed shall return to normal speed until you call setGameSpeed() again.</p>
+<h2><a class="anchor" id="autotoc_md14"></a>
+Object Size and Brightness</h2>
+<p>In Gesture mode, there are metrics about the visible object available. Notably, you can pull the "brightness" (IR reflected light) and size (pixels) of any object in view.</p>
+<ul>
+<li>sensor.getObjectBrightness();</li>
+<li>sensor.getObjectSize();</li>
+</ul>
+<p>Brightness is measured on a scale of 0..255 with no units. Size is 0..900 where the value is how many pixels of the 30x30 IR camera are picking up an object.</p>
 <hr  />
-<h1><a class="anchor" id="autotoc_md15"></a>
+<h1><a class="anchor" id="autotoc_md16"></a>
 Library History</h1>
 <p><b>Version 1.5.0</b></p>
 <ul>
 <li>Implemented "game mode" and "normal" APIs to use values received from PixArt email response by Xavier Liu (Thank you!).</li>
+<li>Added getObjectSize() and getObjectBrightness() interfaces</li>
 </ul>
 <p><b>Version 1.4.0</b></p>
 <ul>
