--- a/latest/index.html
+++ b/latest/index.html
@@ -212,8 +212,9 @@ Library History</h1>
 <p><b>Version 1.5.0</b></p>
 <ul>
 <li>Implemented "game mode" and "normal" APIs to use values received from PixArt email response by Xavier Liu (Thank you!).</li>
-<li>Added getObjectSize() and getObjectBrightness() interfaces</li>
+<li>Added getObjectSize() and getObjectBrightness() interfaces (Issues #58 &amp; #59).</li>
 </ul>
+<p><b>Version 1.4.1</b> ￼- Fixed serious I2C initialization bug - needed to set memory bank twice to init reliably (see Issue #56)</p>
 <p><b>Version 1.4.0</b></p>
 <ul>
 <li>Work done by <a href="https://github.com/acrandal">Aaron S. Crandall</a> &lt;<a href="#" onclick="location.href='mai'+'lto:'+'cra'+'nd'+'all'+'@g'+'onz'+'ag'+'a.e'+'du'; return false;">crand<span style="display: none;">.nosp@m.</span>all@<span style="display: none;">.nosp@m.</span>gonza<span style="display: none;">.nosp@m.</span>ga.e<span style="display: none;">.nosp@m.</span>du</a>&gt; and <a href="https://github.com/skallaher">Sean Kallaher</a> with input from <a href="https://github.com/ianfixes">Ian</a> on arduino_ci use</li>
