Publish Docs latest abfe35b9c9be7e54643ed1c40105536eb42b1f68

--- a/latest/index.html
+++ b/latest/index.html
@@ -207,14 +207,22 @@ Object Size and Brightness</h2>
 </ul>
 <p>Brightness is measured on a scale of 0..255 with no units. Size is 0..900 where the value is how many pixels of the 30x30 IR camera are picking up an object.</p>
 <h2><a class="anchor" id="autotoc_md15"></a>
-Object Motion Stats</h2>
+Object Motion States in Gesture Mode</h2>
 <p>In Gesture mode, you can get some stats on object visibility and motion.</p>
 <ul>
 <li>sensor.getNoObjectCount();</li>
 <li>sensor.getNoMotionCount();</li>
+<li>sensor.getObjectCenterX();</li>
+<li>sensor.getObjectCenterY();</li>
+<li>getObjectVelocityX();</li>
+<li>getObjectVelocityY();</li>
+<li>isObjectInView();</li>
 </ul>
 <p>NoObjectCount reports the number of ticks since an object left the view. It reports a value between 0..255. Each increment represents about 7.2ms in normal mode and 4.1ms in game mode.</p>
 <p>Similarly, NoMotionCount is ticks since there was motion (even if there is still an object in view, but it's holding still). For some reason it only counts 0..12.</p>
+<p>getObjectCenterX and getObjectCenterY return an int with a coordinate for any object in view. They both return 0 if there's no object. The results are in 0..3712. NOTE: The X coordinate is reversed in gesture mode by default so 0 is on the right. This can be flipped with the invertXAxis() interface, but will also reverse the gestures (GES_LEFT becomes GES_RIGHT, Clockwise becomes Anti-Clockwise).</p>
+<p>getObjectVelocityX and getObjectVelocityY poll for a velocity of any object crossing the sensor's view. They return 0 if no object is in view or if the object isn't moving. They return an int from -63 to 63. Negative and positive refer to the direction of travel.</p>
+<p>isObjectInView returns true if there's an object in view.</p>
 <hr  />
 <h1><a class="anchor" id="autotoc_md17"></a>
 Library History</h1>
@@ -222,9 +230,14 @@ Library History</h1>
 <ul>
 <li>Implemented "game mode" and "normal" APIs to use values received from PixArt email response by Xavier Liu (Thank you!).</li>
 <li>Added getObjectSize() and getObjectBrightness() interfaces (Issues #58 &amp; #59).</li>
-<li>Added getNoMotionCount() and getNoObjectCount interfaces.</li>
+<li>Added getNoMotionCount() and getNoObjectCount interfaces (Issues #62).</li>
+<li>Added getObjectCenterX() and getObjectCenterY() interfaces in gesture mode.</li>
+<li>Added getObjectVelocityX(), getObjectVelocityY() and isObjectInView() interfaces in gesture mode. (Issues #64)</li>
 </ul>
-<p><b>Version 1.4.1</b> ￼- Fixed serious I2C initialization bug - needed to set memory bank twice to init reliably (see Issue #56)</p>
+<p><b>Version 1.4.1</b></p>
+<ul>
+<li>Fixed serious I2C initialization bug - needed to set memory bank twice to init reliably (see Issue #56)</li>
+</ul>
 <p><b>Version 1.4.0</b></p>
 <ul>
 <li>Work done by <a href="https://github.com/acrandal">Aaron S. Crandall</a> &lt;<a href="#" onclick="location.href='mai'+'lto:'+'cra'+'nd'+'all'+'@g'+'onz'+'ag'+'a.e'+'du'; return false;">crand<span style="display: none;">.nosp@m.</span>all@<span style="display: none;">.nosp@m.</span>gonza<span style="display: none;">.nosp@m.</span>ga.e<span style="display: none;">.nosp@m.</span>du</a>&gt; and <a href="https://github.com/skallaher">Sean Kallaher</a> with input from <a href="https://github.com/ianfixes">Ian</a> on arduino_ci use</li>
