--- a/stable/index.html
+++ b/stable/index.html
@@ -22,7 +22,7 @@
  <tr style="height: 56px;">
   <td id="projectalign" style="padding-left: 0.5em;">
    <div id="projectname">RevEng_PAJ7620
-   &#160;<span id="projectnumber">1.4.1</span>
+   &#160;<span id="projectnumber">1.5.0</span>
    </div>
   </td>
  </tr>
@@ -120,6 +120,8 @@ Example Sketches Provided</h1>
 <li>paj7620_interrupt // Sets up an interrupt routine to wait for any gestures</li>
 <li>paj7620_wave_count // Polls for the number of waves the sensor sees</li>
 <li>paj7620_cursor_demo // Polls the sensor for a 'cursor', which is an object in front of the sensor. It then pulls the cursor location using (x,y) coordinates</li>
+<li>paj7620_object_size_brightness // Polls for an object's size (in pixels) and "brightness" (0..255)</li>
+<li>paj7620_corners // Polls for which quadrant the object is in - NE/NW/SE/SW (or none/middle)</li>
 </ul>
 <hr  />
 <h1><a class="anchor" id="autotoc_md7"></a>
@@ -190,10 +192,72 @@ Cursor Mode Summary</h2>
 <p>The program can return to gesture mode with the setGestureMode call:</p><ul>
 <li>sensor.setGestureMode();</li>
 </ul>
+<h2><a class="anchor" id="autotoc_md13"></a>
+Game Mode Summary</h2>
+<p>The PixArt datasheets refer prominently to "game mode" with the sensor. The documentation talks about game mode providing 240fps instead of normal mode's 120fps. After working with PixArt to get the correct values in place, these modes are set with the driver API's:</p><ul>
+<li>sensor.setNormalSpeed();</li>
+<li>sensor.setGameSpeed();</li>
+</ul>
+<p>The biggest side effect of using game speed is that if you're polling the sensor for events, especially cursor location updates, you can receive data results at around twice the rate with the game speed set.</p>
+<p>NOTE: if you change modes (gesture to cursor or cursor to gesture) the speed shall return to normal speed until you call setGameSpeed() again.</p>
+<h2><a class="anchor" id="autotoc_md14"></a>
+Object Size and Brightness</h2>
+<p>In Gesture mode, there are metrics about the visible object available. Notably, you can pull the "brightness" (IR reflected light) and size (pixels) of any object in view.</p>
+<ul>
+<li>sensor.getObjectBrightness();</li>
+<li>sensor.getObjectSize();</li>
+</ul>
+<p>Brightness is measured on a scale of 0..255 with no units. Size is 0..900 where the value is how many pixels of the 30x30 IR camera are picking up an object.</p>
+<h2><a class="anchor" id="autotoc_md15"></a>
+Object Motion States in Gesture Mode</h2>
+<p>In Gesture mode, you can get some stats on object visibility and motion.</p>
+<ul>
+<li>sensor.getNoObjectCount();</li>
+<li>sensor.getNoMotionCount();</li>
+<li>sensor.getObjectCenterX();</li>
+<li>sensor.getObjectCenterY();</li>
+<li>getObjectVelocityX();</li>
+<li>getObjectVelocityY();</li>
+<li>isObjectInView();</li>
+</ul>
+<p>NoObjectCount reports the number of ticks since an object left the view. It reports a value between 0..255. Each increment represents about 7.2ms in normal mode and 4.1ms in game mode.</p>
+<p>Similarly, NoMotionCount is ticks since there was motion (even if there is still an object in view, but it's holding still). For some reason it only counts 0..12.</p>
+<p>getObjectCenterX and getObjectCenterY return an int with a coordinate for any object in view. They both return 0 if there's no object. The results are in 0..3712. NOTE: The X coordinate is reversed in gesture mode by default so 0 is on the right. This can be flipped with the invertXAxis() interface, but will also reverse the gestures (GES_LEFT becomes GES_RIGHT, Clockwise becomes Anti-Clockwise).</p>
+<p>getObjectVelocityX and getObjectVelocityY poll for a velocity of any object crossing the sensor's view. They return 0 if no object is in view or if the object isn't moving. They return an int from -63 to 63. Negative and positive refer to the direction of travel.</p>
+<p>isObjectInView returns true if there's an object in view.</p>
+<h2><a class="anchor" id="autotoc_md16"></a>
+Object in Corner Interface</h2>
+<p>The Corner interface returns which quadrant an object is currently in. This is called in Gesture Mode, but it works in cursor mode which has the quadrants are flipped.</p>
+<p>NW | NE <br  />
+ &ndash;MID&ndash; <br  />
+ SW | SE <br  />
+</p>
+<ul>
+<li>Corner result = sensor.getCorner();</li>
+</ul>
+<p>getCorner() returns a Corner enum. This enum has six values (and synonyms):</p><ul>
+<li>CORNER_NONE : No object in view</li>
+<li>CORNER_NE : Object in upper right quadrant (Quadrant I)</li>
+<li>CORNER_NW : Object in upper left quadrant (Quadrant II)</li>
+<li>CORNER_SW : Object in lower left quadrant (Quadrant III)</li>
+<li>CORNER_SE : Object in lower right quadrant (Quadrant IV)</li>
+<li>CORNER_MIDDLE : Object in buffer region between the corners (to reduce noise)</li>
+</ul>
+<p>Note: Width of middle is set by CORNERS_BUFFER_WIDTH_PCT from .h file</p>
 <hr  />
-<h1><a class="anchor" id="autotoc_md14"></a>
+<h1><a class="anchor" id="autotoc_md18"></a>
 Library History</h1>
-<p><b>Version 1.4.1</b></p><ul>
+<p><b>Version 1.5.0</b></p>
+<ul>
+<li>Implemented "game speed" and "normal speed" APIs to use values received from PixArt email response by Xavier Liu (Thank you!).</li>
+<li>Added getObjectSize() and getObjectBrightness() interfaces (Issues #58 &amp; #59).</li>
+<li>Added getNoMotionCount() and getNoObjectCount interfaces (Issues #62).</li>
+<li>Added getObjectCenterX() and getObjectCenterY() interfaces in gesture mode.</li>
+<li>Added getObjectVelocityX(), getObjectVelocityY() and isObjectInView() interfaces in gesture mode (Issue #64).</li>
+<li>Added getCorner() interface to return where an object is from a cartesian quadrant perspective (Issue #52).</li>
+</ul>
+<p><b>Version 1.4.1</b></p>
+<ul>
 <li>Fixed serious I2C initialization bug - needed to set memory bank twice to init reliably (see Issue #56)</li>
 </ul>
 <p><b>Version 1.4.0</b></p>
@@ -258,7 +322,7 @@ Library History</h1>
 <p><b>License</b> <br  />
  MIT - see LICENSE file</p>
 <p><b>Version</b> <br  />
- 1.4.1 </p>
+ 1.5.0 </p>
 </div></div><!-- PageDoc -->
 </div><!-- contents -->
 <!-- start footer part -->
